# blocklab

./: .clang-format  .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: build.yml  test.yml
include/blocklab/: Agent.h  Block.h  BlockTypes.h  CliParsing.h  CudaFuture.h  CudaFutureControlBlock.h  CudaHelpers.h  CudaMeshBuilder.h  CudaObservation.h  CudaSharedFuture.h  CudaWorldGenerator.h  Environment.h  Error.h  Hash.h  Math.h  MeshBuilder.h  MeshTypes.h  Observation.h  PageLockedVector.h  QuadTree.h  Renderer.h  Voxel.h  World.h  WorldGenerator.h
include/blocklab/app/: CliParsing.h
include/blocklab/characters/: Character.h  NPC.h  PigCharacter.h
include/blocklab/characters/meshes/: PigMesh.h
include/blocklab/cli/: CliDisplay.h
include/blocklab/environment/: Agent.h  AgentAction.h  Environment.h  Observation.h
include/blocklab/environment/observation/: ImageBatch.h  InventoryBatch.h  Observation.h
include/blocklab/gpu/cuda/: CudaFuture.h  CudaFutureControlBlock.h  CudaHelpers.h  CudaSharedFuture.h  PageLockedVector.h
include/blocklab/gpu/interop/: VulkanCudaInteropBuffer.h  VulkanCudaInteropSemaphore.h
include/blocklab/gpu/vulkan/: GLFWInit.h  Memory.h  Vulkan.h  VulkanBuffer.h  VulkanSemaphore.h
include/blocklab/graphics/: Display.h  Memory.h  MeshTypes.h  Renderer.h  Vulkan.h  VulkanCudaInteropBuffer.h  VulkanCudaInteropSemaphore.h
include/blocklab/inventory/: Inventory.h  Item.h
include/blocklab/meshes/: PigMesh.h
include/blocklab/utility/: Error.h  Math.h
include/blocklab/world/: CudaWorldGenerator.h  World.h  WorldGenerator.h
python/blocklab/: __init__.py  __main__.py  env.py  visualization.py
python/blocklab/examples/: benchmark.py  demo_classifier.py  visualize.py
scripts/: run_vulkan_validation.py
shaders/: apply_overrides.comp.hlsl  build_mesh.comp.hlsl  common.hlsl  fog.hlsl  generate_region.comp.hlsl  graphics_common.hlsl  lighting.hlsl  material.hlsl  mesh.frag.hlsl  mesh.vert.hlsl  projection.hlsl  render_params.hlsl  reset_mesh_draw.comp.hlsl  vertex_output.hlsl  voxel.vert.hlsl
src/: Agent.cpp  CudaObservation.cu  CudaWorldGenerator.cu  Environment.cpp  MeshBuilder.cpp  MeshBuilderCuda.cu  Renderer.cpp  World.cpp  WorldGenerator.cpp  benchmark.cpp  main.cpp
src/algorithms/: Raycast.h
src/app/: benchmark.cpp  main.cpp
src/characters/: AgentCharacter.cpp  AgentCharacter.h  Character.cpp  Character.h  CharacterKind.h  NPC.cpp  NPC.h  PigCharacter.cpp  PigCharacter.h
src/characters/meshes/: PigMesh.cpp  PigMesh.h
src/cli/: CliDisplay.cpp
src/environment/: Agent.cpp  Agent.h  CudaObservation.cu  CudaObservation.h  Environment.cpp
src/gpu/cuda/: KernelLaunchArgs.h  LaunchKernel.h  PageLockedVector.h
src/gpu/cuda/cpu_fallback/: CpuKernelLauncher.cpp  CpuKernelLauncher.h  CudaRuntimeCpuFallback.cpp  CudaRuntimeCpuFallback.h  cuda_runtime.h
src/gpu/interop/: VulkanCudaInteropBuffer.cpp  VulkanCudaInteropSemaphore.cpp
src/gpu/vulkan/: GLFWInit.cpp  Vulkan.cpp  VulkanBuffer.cpp  VulkanSemaphore.cpp
src/graphics/: Display.cpp  Display.cu  GLFWInit.cpp  Mesh.cpp  Mesh.h  MeshTypes.h  Renderer.cpp  Vulkan.cpp  VulkanBuffer.cpp  VulkanCudaInteropBuffer.cpp  VulkanCudaInteropSemaphore.cpp  VulkanSemaphore.cpp
src/inventory/: Inventory.cpp
src/meshes/: PigMesh.cpp
src/python/: Bindings.cpp
src/utility/: Hash.h
src/world/: Block.h  CudaWorldGenerator.cu  Drop.cpp  Drop.h  HitVolume.h  LightSourceBuffer.h  Lighting.cpp  Lighting.h  OverrideCluster.cpp  OverrideCluster.h  Voxel.h  World.cpp  World.h  WorldGenerator.cpp  WorldGenerator.cu  WorldGenerator.h  WorldTime.h
tests/: PageLockedVector.cpp  Raycast.cpp  SmokeTest.cpp  WorldLighting.cpp  WorldTestUtils.cpp  WorldTestUtils.h  blocklab_quad_tree_test.cpp  blocklab_smoke_test.cpp  cuda_future_test.cpp  hash_test.cpp  page_locked_vector_test.cpp
tests/python/: test_env_api.py
