[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "blocklab"
version = "0.1.0"
description = "Python API for the BlockLab CUDA/Vulkan RL environment"
requires-python = ">=3.10"
dependencies = [
    "matplotlib",
    "pytest",
    "torch",
]

[tool.setuptools.packages.find]
where = ["python"]
